lab3.txt
>>> a="hello"
>>> print(a)
hello
>>> a.append("S")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'str' object has no attribute 'append'
>>> b = "Hello, World!"
>>> print(b[-5:-2]) 
orl
>>>  txt = "The rain in Spain stays mainly in the plain"
  File "<stdin>", line 1
    txt = "The rain in Spain stays mainly in the plain"
    ^
IndentationError: unexpected indent
>>> x = "ain" in txt
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'txt' is not defined
>>> print(x)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'x' is not defined
>>>  txt = "The rain in Spain stays mainly in the plain"
  File "<stdin>", line 1
    txt = "The rain in Spain stays mainly in the plain"
    ^
IndentationError: unexpected indent
>>> txt = "The rain in Spain stays mainly in the plain"
>>> x = "ain" in txt
>>> print(x)
True
>>> a=["Hi"]
>>> a.insert(22)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: insert() takes exactly 2 arguments (1 given)
>>> a.insert(22,1)
>>> print(a)
['Hi', 1]
>>> a.remove(22)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: list.remove(x): x not in list
>>> a.remove(1)
>>> print(a)
['Hi']
>>> a.pop()
'Hi'
>>> print(a)
[]
>>> a.insert(1,10)
>>> a.insert(2,100)
>>> a.insert(3,5)
>>> print(a)
[10, 100, 5]
>>> a.sort()
>>> print(a)
[5, 10, 100]
>>> b=[1,2,3]
>>> a.copy(b)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: copy() takes no arguments (1 given)
>>> a=b.copy()
>>> print(a)
[1, 2, 3]
>>> a.count()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: count() takes exactly one argument (0 given)
>>> a.count(1)
1
>>> a.count(3)
1
>>> a.count(4)
0
>>> a*3
[1, 2, 3, 1, 2, 3, 1, 2, 3]
>>> print(a)
[1, 2, 3]
>>> a+b
[1, 2, 3, 1, 2, 3]
>>> set1={1,2,3,4,5,[7,6]}
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unhashable type: 'list'
>>> set1={1,2,3,4,5}
>>> set1.add(9)
>>> set1.add(6)
>>> set1.update(1,3)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'int' object is not iterable
>>> set2={7,8}
>>> set1.update(set2)
>>> print(set1)
{1, 2, 3, 4, 5, 6, 7, 8, 9}
>>> set1.add(10)
>>> set2.add(10)
>>> set1.union(set2)
{1, 2, 3, 4, 5, 6, 7, 8, 9, 10}
>>> set1.intersection(set2)
{8, 10, 7}
>>> set1.difference(set2)
{1, 2, 3, 4, 5, 6, 9}
>>> set1.symmetricdifference(set2)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'set' object has no attribute 'symmetricdifference'
>>> set1.symmetric_difference(set2)
{1, 2, 3, 4, 5, 6, 9}
>>> 


Function

def fun() :
    print("Hello")
print("Welcome")
fun()

